<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splasgbackground"
        android:src="@drawable/rectangle_background"
        android:scaleType="centerCrop"
        android:alpha="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/splash_main_txt"
        android:textColor="?attr/splashTextColor"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/deign_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_by"
        android:textColor="?attr/splashTextColor"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:layout_marginBottom="36dp"
        android:textSize="17sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sarmad_tech_empire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/splashTextColor"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/sarmadtechempire" />
</RelativeLayout>
