<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/welcomescreenbackground"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle_background" />

        <TextView
            android:id="@+id/main_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/splash_main_txt"
            android:textColor="?attr/splashTextColor"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/share_your_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_txt"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/share_your_story_txt"
            android:textColor="?attr/splashTextColor"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/with_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/with_us_txt"
            android:layout_below="@id/share_your_story"
            android:layout_centerHorizontal="true"
            android:textColor="?attr/splashTextColor"
            android:textSize="38sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/myProfileCv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/with_us"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="200dp"
            android:background="@drawable/rectangle_background">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile4"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/myProfileCv"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_your_name_et"
            android:background="@drawable/btn_background_stroke_blue"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:gravity="center"
            android:textColorHint="?attr/splashTextColor"
            android:textColor="?attr/splashTextColor"
            android:layout_marginTop="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_mail_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_name_et"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_your_email_et"
            android:background="@drawable/btn_background_stroke_blue"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:gravity="center"
            android:textColorHint="?attr/splashTextColor"
            android:textColor="?attr/splashTextColor"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_mail_et"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_password_et"
            android:background="@drawable/btn_background_stroke_blue"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:gravity="center"
            android:textColorHint="?attr/splashTextColor"
            android:textColor="?attr/splashTextColor"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/login_btn_txt"
            app:backgroundTint="@null"
            android:background="@drawable/btn_background_stroke_red"
            android:textSize="20sp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"/>

        <TextView
            android:id="@+id/new_here_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here_txt"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_here_txt"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:text="@string/register_btn_txt"
            app:backgroundTint="@color/blue"
            android:background="@drawable/btn_background_stroke_blue"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"/>

        <TextView
            android:id="@+id/orTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_tv"
            android:layout_below="@id/register_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/register_with_Google_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_with_google_tv"
            android:layout_below="@id/orTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_with_Google_tv"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:text="@string/register_with_google_btn"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/google_btn"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"
            android:drawableStart="@drawable/google_icon"
            android:drawablePadding="8dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/deign_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_by"
            android:layout_below="@+id/googleRegisterBtn"
            android:textColor="?attr/splashTextColor"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:layout_marginTop="70dp"
            android:textSize="17sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/sarmad_tech_empire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:textSize="17sp"
            android:layout_below="@id/deign_by"
            android:textColor="?attr/splashTextColor"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/sarmadtechempire" />




    </RelativeLayout>
</androidx.core.widget.NestedScrollView>