<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:contentDescription="@string/welcomescreenbackground"
            android:scaleType="centerCrop"
            android:src="@drawable/rectangle_background" />

        <TextView
            android:id="@+id/main_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/splash_main_txt"
            android:textColor="?attr/splashTextColor"
            android:textSize="50sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/share_your_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_txt"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/share_your_story_txt"
            android:textColor="?attr/splashTextColor"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/with_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/with_us_txt"
            android:layout_below="@id/share_your_story"
            android:layout_centerHorizontal="true"
            android:textColor="?attr/splashTextColor"
            android:textSize="38sp" />

        <EditText
            android:id="@+id/login_mail_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/with_us"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_your_email_et"
            android:background="@drawable/btn_background_stroke_red"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:gravity="center"
            android:textColorHint="?attr/splashTextColor"
            android:textColor="?attr/splashTextColor"
            android:layout_marginTop="100dp" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_mail_et"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_password_et"
            android:background="@drawable/btn_background_stroke_red"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:gravity="center"
            android:textColorHint="?attr/splashTextColor"
            android:textColor="?attr/splashTextColor"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/login_btn_txt"
            app:backgroundTint="@color/red"
            android:background="@drawable/btn_background_stroke_red"
            android:textSize="20sp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor" />

        <TextView
            android:id="@+id/new_here_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here_txt"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_here_txt"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:text="@string/register_btn_txt"
            app:backgroundTint="@null"
            android:background="@drawable/btn_background_stroke_blue"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:textColor="?attr/splashTextColor" />

        <TextView
            android:id="@+id/design_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_by"
            android:layout_below="@id/register_btn"
            android:textColor="?attr/splashTextColor"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:layout_marginTop="70dp"
            android:textSize="17sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/sarmad_tech_empire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:textSize="17sp"
            android:layout_below="@id/design_by"
            android:textColor="?attr/splashTextColor"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/sarmadtechempire" />

        <com.dinuscxj.progressbar.CircleProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:progress_style="line"
            app:progress_stroke_width="1dp"
            app:progress_start_color="@android:color/holo_purple"
            app:progress_end_color="@android:color/holo_green_light"
            app:progress_background_color="@android:color/darker_gray"
            android:layout_below="@+id/login_password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:progress_start_degree="-90"
            android:visibility="gone"
            app:progress_text_size="0dp"
            app:drawBackgroundOutsideProgress="true"
            app:progress_shader="sweep"
            app:progress_stroke_cap="round"
            app:progress_blur_style="solid"
            app:progress_blur_radius="5dp"
            app:line_width="4dp"
            app:line_count="30"/>



    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
